--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_2/DockerizedCovidRegistrationForm/Dockerfile
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_2/DockerizedCovidRegistrationForm/Dockerfile
@@ -1,11 +1,14 @@
 #This file is already in a git repo and will not be called from here
 #The file is located here: https://github.com/BFL-Psycho/cac-aa2-covid-registration-form-docker
 
+#Description: Setting up the basic enviroment
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
-
 RUN apt-get update && apt-get install git
+
+#Description: Download the Covid NHS form website from GitHub
 WORKDIR /myWebApp 
 RUN git clone https://github.com/looking4ward/nhs-cac-docker-dotnetwebapp.git
+
 RUN cd nhs-cac-docker-dotnetwebapp && dotnet restore
 RUN cd nhs-cac-docker-dotnetwebapp && dotnet publish -c Release -o out
 
