--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_3/GCP_Environment/Dockerfile
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_3/GCP_Environment/Dockerfile
@@ -1,41 +1,34 @@
-FROM alpine:3.8
-
+FROM ubuntu:18.04
 
 ENV TERRAFORM_VERSION=0.13.4
 ENV PACKER_VERSION=1.3.3
 ENV PIP_VERSION=18.1
 
 COPY . /workspace/
-COPY cac-aa3-terraform-credentials.json $HOME
+RUN cp /workspace/cac-aa3-terraform-credentials.json ~
 WORKDIR /workspace
 
 USER root
 
-RUN apk add --no-cache curl unzip bash python py-pip git openssh libffi-dev jq grep && \
-    apk --no-cache add --virtual=build gcc libffi-dev musl-dev openssl-dev python-dev python3-dev make && \
-    pip install pip==${PIP_VERSION}
+# Update & Upgrade
+RUN apt-get update && apt-get upgrade -y
 
-RUN apk add bind-tools
+# Install tools
+RUN apt-get install -y curl unzip git jq grep dnsutils 
 
+# Install python and additional tools for python
+RUN apt-get install -y python3-pip build-essential libssl-dev libffi-dev python3-dev
+
+# Install ansible
+RUN apt-get install -y software-properties-common && \
+    apt-add-repository --yes --update ppa:ansible/ansible && \
+    apt-get install -y ansible
     
-# Install Terraform
-RUN curl https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip -o terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
-    unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip -d /usr/local/bin && \
-    rm -f terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
-    terraform init
+# Install packer
+RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add - && \
+    apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main" && \
+    apt-get update && apt-get install -y packer
 
-# Install Packer
-RUN curl https://releases.hashicorp.com/packer/${PACKER_VERSION}/packer_${PACKER_VERSION}_linux_amd64.zip -o packer_${PACKER_VERSION}_linux_amd64.zip && \
-    unzip packer_${PACKER_VERSION}_linux_amd64.zip -d /usr/local/bin && \
-    rm -f packer_${PACKER_VERSION}_linux_amd64.zip  && \
-    ln -s /usr/local/bin/packer /usr/local/bin/packer-io
-
-# Install shellcheck
-RUN wget https://github.com/koalaman/shellcheck/releases/download/latest/shellcheck-latest.linux.x86_64.tar.xz && \
-    tar xvfJ shellcheck-latest.linux.x86_64.tar.xz && \
-    chmod +x shellcheck-latest/shellcheck && \
-    mv shellcheck-latest/shellcheck /usr/bin/shellcheck && \
-    rm shellcheck-latest.linux.x86_64.tar.xz && \
-    rm -rf shellcheck-latest
-
+# Install terraform
+RUN apt-get update && apt-get install -y terraform
 
