AWS Assignment 3 update

--- a/Q1 Cloud Automation Concepts/Assessment_Assignment_3/AWS_Environment/2-DataLayerStack/aa3_data_layer_stack.yml
+++ b/Q1 Cloud Automation Concepts/Assessment_Assignment_3/AWS_Environment/2-DataLayerStack/aa3_data_layer_stack.yml
@@ -470,3 +470,9 @@ Outputs:
     Value: !Sub "https://${CACAA3CovidAPI}.execute-api.${AWS::Region}.amazonaws.com/v0/CACAA3MongoDBDataRetriever"
     Export:
       Name: DataLayerStack:CovidDataAPIEndpointURL
+  LambdaExecutionRoleArn:
+    Description: The Arn of the role used to invoke Lambdas working with MongoDB
+    Value: !GetAtt CACAA3LambdaBasicRole.Arn
+    Export:
+      Name: DataLayerStack:LambdaExecutionRoleArn
+  
